@@ -2,8 +2,6 @@ package com.neomechanical.neoutils.languages;
 
 import com.neomechanical.neoutils.NeoUtils;
 import com.neomechanical.neoutils.config.ConfigUpdater;
-import com.neomechanical.neoutils.manager.ManagerManager;
-import com.neomechanical.neoutils.messages.Logger;
 import com.neomechanical.neoutils.utils.UtilManager;
 import org.apache.commons.io.IOUtils;
 import org.bukkit.ChatColor;
@@ -21,18 +19,18 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 
 public class LanguageManager {
-    final Map<String, String> internalPlaceholderReplacements;
-    private final JavaPlugin main;
-    File languageFolder = null;
-    private File languageConfigFile = null;
-    private FileConfiguration languageConfig;
+    private @NotNull
+    static final ArrayList<String> languageFiles = new ArrayList<>();
     private static String currentLanguage = "en";
     private static String languageCode = "en-US";
     private static Supplier<String> languageChangeConsumer;
-
-    private FileConfiguration defaultLanguageConfig = null;
+    final Map<String, String> internalPlaceholderReplacements;
+    private final NeoUtils main;
     private final Map<String, Function<Player, String>> internalPlaceholders = new HashMap<>();
-    private @NotNull static final ArrayList<String> languageFiles = new ArrayList<>();
+    File languageFolder = null;
+    private File languageConfigFile = null;
+    private FileConfiguration languageConfig;
+    private FileConfiguration defaultLanguageConfig = null;
 
 
     /**
@@ -41,42 +39,49 @@ public class LanguageManager {
      * @param main the main class
      */
     public LanguageManager(final JavaPlugin main) {
-        this.main = main;
+        this.main = (NeoUtils) main;
         internalPlaceholderReplacements = new HashMap<>();
     }
+
     public LanguageManager addInternalPlaceholder(String placeholder, Function<Player, String> placeholderFunction) {
         this.internalPlaceholders.put(placeholder, placeholderFunction);
         return this;
     }
-    public LanguageManager setLanguageCode(Supplier<String> languageCode) {
-        LanguageManager.languageChangeConsumer = languageCode;
-        return this;
-    }
+
     public LanguageManager setLanguageFile( @NotNull String... files) {
         languageFiles.clear();
         languageFiles.addAll(Arrays.asList(files));
         return this;
     }
+
     public LanguageManager addLanguageFile(String... languageCode) {
         LanguageManager.languageFiles.addAll(Arrays.asList(languageCode));
         return this;
     }
+
     /**
      * Set the manager instance
      */
     public void set() {
         NeoUtils.getManagers().setLanguageManager(this);
     }
+
     public String getLanguageCode() {
         return languageCode;
     }
+
+    public LanguageManager setLanguageCode(Supplier<String> languageCode) {
+        LanguageManager.languageChangeConsumer = languageCode;
+        return this;
+    }
+
     private void loadMissingDefaultLanguageFiles() {
         //Create the Language Data Folder if it does not exist yet (the NotQuests/languages folder)
         languageFolder = new File(main.getDataFolder().getPath() + "/languages/");
 
         if (!languageFolder.exists()) {
             if (!languageFolder.mkdirs()) {
-                Logger.fatal("There was an error creating the languages folder.");
+                main.getFancyLogger().fatal("There was an error creating the languages folder.");
                 return;
             }
         }
@@ -87,7 +92,7 @@ public class LanguageManager {
 
                 if (!file.exists()) {
                     if (!file.createNewFile()) {
-                        Logger.fatal("There was an error creating the " + fileName + " language file. (3)");
+                        main.getFancyLogger().fatal("There was an error creating the " + fileName + " language file. (3)");
                         return;
                     }
 
@@ -97,7 +102,7 @@ public class LanguageManager {
                         try (OutputStream outputStream = new FileOutputStream(file)) {
                             IOUtils.copy(inputStream, outputStream);
                         } catch (Exception e) {
-                            Logger.fatal("There was an error creating the " + fileName + " language file. (4)");
+                            main.getFancyLogger().fatal("There was an error creating the " + fileName + " language file. (4)");
                             return;
                         }
                     }
@@ -117,26 +122,26 @@ public class LanguageManager {
                             //Put into fileConfiguration
 
                             if (!defaultFile.exists()) {
-                                Logger.fatal("There was an error reading the default.yml language file. (5)");
+                                main.getFancyLogger().fatal("There was an error reading the default.yml language file. (5)");
                                 return;
                             }
                             defaultLanguageConfig = new YamlConfiguration();
                             defaultLanguageConfig.load(defaultFile);
 
                         } catch (Exception e) {
-                            Logger.fatal("There was an error creating the default.yml language file. (6)");
+                            main.getFancyLogger().fatal("There was an error creating the default.yml language file. (6)");
                             return;
                         }
                     } else {
-                        Logger.fatal("There was an error creating the default.yml language file. (7)");
+                        main.getFancyLogger().fatal("There was an error creating the default.yml language file. (7)");
                         return;
                     }
 
 
                 }
-                ConfigUpdater.update(main, "translations/" + fileName, file, List.of(""));
+                ConfigUpdater.update(main, "translations/" + fileName, file, Collections.singletonList(""));
             } catch (IOException ioException) {
-                Logger.fatal("There was an error creating the " + fileName + " language file. (3)");
+                main.getFancyLogger().fatal("There was an error creating the " + fileName + " language file. (3)");
                 return;
             }
         }
@@ -166,14 +171,14 @@ public class LanguageManager {
 
             if (!languageFolder.exists()) {
                 if (!languageFolder.mkdirs()) {
-                    Logger.warn("There was an error creating the NeoPerformance languages folder.");
+                    main.getFancyLogger().warn("There was an error creating the NeoPerformance languages folder.");
                     return;
                 }
 
             }
 
             if (!languageFiles.contains(languageCode + ".yml")) {
-                Logger.warn("The language file " + languageCode + ".yml does not exist or is not supported." +
+                main.getFancyLogger().warn("The language file " + languageCode + ".yml does not exist or is not supported." +
                         " Please look at the languages folder for a list of supported languages. Using the primary language file instead.");
                 languageCode = "en-US";
             }
@@ -185,17 +190,17 @@ public class LanguageManager {
                     //Try to create the language.yml config file, and throw an error if it fails.
 
                     if (!languageConfigFile.createNewFile()) {
-                        Logger.warn("There was an error creating the " + languageCode + ".yml language file.");
+                        main.getFancyLogger().warn("There was an error creating the " + languageCode + ".yml language file.");
                         return;
 
                     }
                 } catch (IOException ioException) {
-                    Logger.warn("There was an error creating the " + languageCode + ".yml language file.");
+                    main.getFancyLogger().warn("There was an error creating the " + languageCode + ".yml language file.");
                     return;
                 }
             } else {
                 try {
-                    ConfigUpdater.update(main, "translations/" + languageCode + ".yml", languageConfigFile, List.of(""));
+                    ConfigUpdater.update(main, "translations/" + languageCode + ".yml", languageConfigFile, Collections.singletonList(""));
                 } catch (IOException e) {
                     e.printStackTrace();
                 }
@@ -271,7 +276,7 @@ public class LanguageManager {
 
         } catch (IOException ioException) {
             ioException.printStackTrace();
-            Logger.severe("Language Config file could not be saved.");
+            main.getFancyLogger().severe("Language Config file could not be saved.");
         }
     }
 
